prep to publish to npm

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-interpolation",
+  "name": "@prototyp-stockholm/nuxt-interpolation",
   "version": "1.0.0",
   "license": "MIT",
   "type": "module",
